fixed iframe width

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <img src="images/madtech_logo.pdf" alt="madtech logo">
 
-        <h2>Services    |   Videos  |   About   |   Contact </h2>
+        <h2>Services    |   CaseStudies  |   About   |   Contact </h2>
         
     </header>
     
