--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <header>
 
-        <img src="images/madtech_logo.pdf" alt="madtech logo">
+        <img src="images/madtech_logo.png" alt="madtech logo">
 
         <h2>Services    |   CaseStudies  |   About   |   Contact </h2>
         
