--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <h2>Diagnostics video of the week.</h2>
 
-            <iframe src="https://www.youtube.com/embed/TgdqJ7irgB4"></iframe>
+            <p><iframe src="https://www.youtube.com/embed/TgdqJ7irgB4"></iframe></p>
             
         </section>
 
