--- a/services.html
+++ b/services.html
@@ -1,38 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Services</title>
 </head>
+
 <body>
-       <!-- Services-->
-       <section>
+    <header>
 
-        <h2>At Your Service</h2>
+        <a href="index.html"><img src="images/madtech_logo.png" alt="madtech logo"></a>
 
-        <hr />
-        <h3>Key Programming</h3>
-        <h4>We cut and program any car key!</h4>
-        <iframe width="420" height="345" src="https://www.youtube.com/embed/58fDMH5MLtM">
-        </iframe>
-        <hr />
-        <h3>Computer Programming</h3>
-        <p>We run Computer Diagnostics on all vehicles.</p>
-        <iframe width="420" height="345" src="https://www.youtube.com/embed/9ANpubUsQfM">
-        </iframe>
-        <hr />
-        <h3>Electrical Programming</h3>
-        <p>Do you have an electrical problem? We can help!</p>
-        <iframe width="420" height="345" src="https://www.youtube.com/embed/TgdqJ7irgB4">
-        </iframe>
-        
-        <hr />
-        <h3>Mobile Programming</h3>
-        <p>We come to you where ever you may be! </p>
-        <hr />
+        <h2><a href="index.html">Home</a>&nbsp<a href="services.html">Services</a>&nbsp<a href="contact.html">Contact</a></h2>
 
-    </section>
+    </header>
+
+    <main>
+        <!-- Services-->
+        <article>
+
+            <h2>At Your Service</h2>
+
+
+            <h3>Key Programming</h3>
+            <h4>We cut and program any car key!</h4>
+            <iframe width="420" height="345" src="https://www.youtube.com/embed/58fDMH5MLtM">
+            </iframe>
+            <hr />
+            <h3>Computer Programming</h3>
+            <p>We run Computer Diagnostics on all vehicles.</p>
+            <iframe width="420" height="345" src="https://www.youtube.com/embed/9ANpubUsQfM">
+            </iframe>
+            <hr />
+            <h3>Electrical Programming</h3>
+            <p>Do you have an electrical problem? We can help!</p>
+            <iframe width="420" height="345" src="https://www.youtube.com/embed/TgdqJ7irgB4">
+            </iframe>
+
+            <hr />
+            <h3>Mobile Programming</h3>
+            <p>We come to you where ever you may be! </p>
+            <hr />
+
+        </article>
+    </main>
+    <footer>
+        <p>&copy; 2020 - MadTechDiagnostics<a
+                href="https://www.google.com/maps/uv?pb=!1s0x22b60f6a060ecfeb%3A0xbe1cb9c6a8ad2582!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs%3Dw180-h320-k-no!5smadtech%20diagnostics%20-%20Google%20Search!15sCgIgAQ&imagekey=!1e10!2sAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs&hl=en&sa=X&ved=2ahUKEwjilM-ppobyAhXY3J4KHTEdDzYQoiowEnoECEcQAw"
+                class="fa fa-google"></a><a href="https://www.instagram.com/madtechdiagnostics"
+                class="fa fa-instagram"></a>
+        </p>
+
+    </footer>
 </body>
+
 </html>
