--- a/contact.html
+++ b/contact.html
@@ -44,22 +44,20 @@
             <h3>Service Writer<br>Mini Mouse</h3>
             <img src="images/mini.jpg" alt="Mini photo">
         </aside>
-        <form action="mailto:yoki139@hotmail.com"
-        method="POST"
-        enctype="multipart/form-data"
-        name="EmailForm"> 
+        <form action="mailto:bogus_email@outlook.com" method="POST" enctype="multipart/form-data" name="EmailForm">
             <input type="text" name="name" placeholder="Name" required>
             <input type="email" name="email" placeholder="Email" required>
             <textarea name="text" placeholder="Message" required></textarea>
-            <button type="submit" value="submit" class="submit">Send</button>
+            <button type="submit" class="submit">send</button>
         </form>
 
     </main>
     <footer>
         <p>&copy; 2020 - MadTechDiagnostics<a
-                href="https://www.google.com/maps/uv?pb=!1s0x22b60f6a060ecfeb%3A0xbe1cb9c6a8ad2582!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs%3Dw180-h320-k-no!5smadtech%20diagnostics%20-%20Google%20Search!15sCgIgAQ&imagekey=!1e10!2sAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs&hl=en&sa=X&ved=2ahUKEwjilM-ppobyAhXY3J4KHTEdDzYQoiowEnoECEcQAw" title="Go to google"
-                class="fa fa-google" target="_blank"></a><a href="https://www.instagram.com/madtechdiagnostics" title="Go to instagram"
-                class="fa fa-instagram" target="_blank"></a>
+                href="https://www.google.com/maps/uv?pb=!1s0x22b60f6a060ecfeb%3A0xbe1cb9c6a8ad2582!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs%3Dw180-h320-k-no!5smadtech%20diagnostics%20-%20Google%20Search!15sCgIgAQ&imagekey=!1e10!2sAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs&hl=en&sa=X&ved=2ahUKEwjilM-ppobyAhXY3J4KHTEdDzYQoiowEnoECEcQAw"
+                title="Go to google" class="fa fa-google" target="_blank"></a><a
+                href="https://www.instagram.com/madtechdiagnostics" title="Go to instagram" class="fa fa-instagram"
+                target="_blank"></a>
         </p>
 
     </footer>
