--- a/services.html
+++ b/services.html
@@ -10,21 +10,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MadTech/Services</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>MadTech/Services</title>
 </head>
 
 <body>
     <header>
-
         <a href="index.html"><img src="images/madtech_logo.png" alt="madtech logo"></a>
-
-        <h2><a href="index.html">Home</a>&nbsp;<a href="contact.html">Contact</a></h2>
-
     </header>
+    <nav id="nav_menu">
+		<ul>
+			<li><a href="index.html">Home</a></li>
 
+			<li><a href="services.html" class="current">Services</a></li>
+
+			<li><a href="contact.html">About Us</a></li>
+		</ul>
+	</nav>
     <main>
         <!-- Services-->
         <article>
