--- a/contact.html
+++ b/contact.html
@@ -10,20 +10,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MadTech/Contact</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>MadTech/Contact</title>
 </head>
 
 <body>
     <header>
-
         <a href="index.html"><img src="images/madtech_logo.png" alt="madtech logo"></a>
-
-        <h2><a href="index.html">Home</a> &nbsp; <a href="services.html">Services</a></h2>
-
     </header>
+    <nav id="nav_menu">
+		<ul>
+			<li><a href="index.html">Home</a></li>
+
+			<li><a href="services.html">Services</a></li>
+
+			<li><a href="contact.html" class="current">About Us</a></li>
+		</ul>
+	</nav>
     <main>
         <!-- Contact  -->
         <article>
@@ -37,19 +42,21 @@
             </address>
 
         </article>
-        <aside>
-            <h2>Who We Are</h2>
-            <h3>Owner/Technician<br>Mickey Mouse</h3>
-            <img src="images/mickey.jpg" alt="Mickey photo">
-            <h3>Service Writer<br>Mini Mouse</h3>
-            <img src="images/mini.jpg" alt="Mini photo">
-        </aside>
-        <form action="mailto:bogus_email@outlook.com" method="POST" enctype="multipart/form-data" name="EmailForm">
-            <input type="text" name="name" placeholder="Name" required>
-            <input type="email" name="email" placeholder="Email" required>
-            <textarea name="text" placeholder="Message" required></textarea>
-            <button type="submit" class="submit">send</button>
-        </form>
+        <section>
+            <aside>
+                <h2>Who We Are</h2>
+                <h3>Owner/Technician<br>Mickey Mouse</h3>
+                <img src="images/mickey.jpg" alt="Mickey photo">
+                <h3>Service Writer<br>Mini Mouse</h3>
+                <img src="images/mini.jpg" alt="Mini photo">
+            </aside>
+            <form action="mailto:bogus_email@outlook.com" method="POST" enctype="multipart/form-data" name="EmailForm">
+                <input type="text" name="name" placeholder="Name" required>
+                <input type="email" name="email" placeholder="Email" required>
+                <textarea name="text" placeholder="Message" required></textarea>
+                <button type="submit" class="submit">send</button>
+            </form>
+        </section>
 
     </main>
     <footer>
