--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head>
     <!-- 
             Charlie Villanueva
-            08-10-2021
-            CS 125H - Term Project Home Page v4
+            08-18-2021
+            CS 125H - Term Project Home Page v5
          -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MadTech Diagnostics</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>MadTech Diagnostics</title>
-
+    
 </head>
 
 <body>
@@ -22,8 +22,6 @@
     <header>
 
         <a href="index.html"><img src="images/madtech_logo.png" alt="madtech logo"></a>
-
-        <h2></h2>
         
     </header>
     <nav id="nav_menu">
@@ -32,7 +30,7 @@
 
 			<li><a href="services.html">Services</a></li>
 
-			<li><a href="contact.html" class="lastitem">About Us</a></li>
+			<li><a href="contact.html">About Us</a></li>
 		</ul>
 	</nav>
     <main>
