--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 
 			<li><a href="services.html">Services</a></li>
 
-			<li><a href="contact.html" class="current">About Us</a></li>
+			<li><a href="contact.html" class="current">About</a></li>
 		</ul>
 	</nav>
     <main>
@@ -45,7 +45,7 @@
         <section>
             <aside>
                 <h2>Who We Are</h2>
-                <h3>Owner/Technician<br>Mickey Mouse</h3>
+                <h3>Owner - Tech<br>Mickey Mouse</h3>
                 <img src="images/mickey.jpg" alt="Mickey photo">
                 <h3>Service Writer<br>Mini Mouse</h3>
                 <img src="images/mini.jpg" alt="Mini photo">
