--- a/contact.html
+++ b/contact.html
@@ -18,13 +18,13 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="images/madtech_logo.png" alt="madtech logo"></a>
+        <a href="index.html" alt="home page"><img src="images/madtech_logo.png" alt="madtech logo"></a>
     </header>
     <nav id="nav_menu">
 		<ul>
-			<li><a href="index.html">Home</a></li>
+			<li><a href="index.html" alt="home page">Home</a></li>
 
-			<li><a href="services.html">Services</a></li>
+			<li><a href="services.html" alt="service page">Services</a></li>
 
 			<li><a href="contact.html" class="current">About</a></li>
 		</ul>
@@ -62,8 +62,8 @@
     <footer>
         <p>&copy; 2020 - MadTechDiagnostics<a
                 href="https://www.google.com/maps/uv?pb=!1s0x22b60f6a060ecfeb%3A0xbe1cb9c6a8ad2582!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs%3Dw180-h320-k-no!5smadtech%20diagnostics%20-%20Google%20Search!15sCgIgAQ&imagekey=!1e10!2sAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs&hl=en&sa=X&ved=2ahUKEwjilM-ppobyAhXY3J4KHTEdDzYQoiowEnoECEcQAw"
-                title="Go to google" class="fa fa-google" target="_blank"></a><a
-                href="https://www.instagram.com/madtechdiagnostics" title="Go to instagram" class="fa fa-instagram"
+                alt="Go to google" class="fa fa-google" target="_blank"></a><a
+                href="https://www.instagram.com/madtechdiagnostics" alt="Go to instagram" class="fa fa-instagram"
                 target="_blank"></a>
         </p>
 
