--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     </header>
     <nav id="nav_menu">
 		<ul>
-			<li><a href="index.html" class="current">Home</a></li>
+			<li><a href="index.html" alt ="home page" class="current">Home</a></li>
 
-			<li><a href="services.html">Services</a></li>
+			<li><a href="services.html" alt="services page">Services</a></li>
 
-			<li><a href="contact.html">About Us</a></li>
+			<li><a href="contact.html"alt="contact page ">About Us</a></li>
 		</ul>
 	</nav>
     <main>
@@ -54,7 +54,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2020 - MadTechDiagnostics<a href="https://www.google.com/maps/uv?pb=!1s0x22b60f6a060ecfeb%3A0xbe1cb9c6a8ad2582!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs%3Dw180-h320-k-no!5smadtech%20diagnostics%20-%20Google%20Search!15sCgIgAQ&imagekey=!1e10!2sAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs&hl=en&sa=X&ved=2ahUKEwjilM-ppobyAhXY3J4KHTEdDzYQoiowEnoECEcQAw" alt="Go to google" class="fa fa-google"></a><a href="https://www.instagram.com/madtechdiagnostics" alt="Go to instagram" class="fa fa-instagram"></a>
+        <p>&copy; 2020 - MadTechDiagnostics<a href="https://www.google.com/maps/uv?pb=!1s0x22b60f6a060ecfeb%3A0xbe1cb9c6a8ad2582!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs%3Dw180-h320-k-no!5smadtech%20diagnostics%20-%20Google%20Search!15sCgIgAQ&imagekey=!1e10!2sAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs&hl=en&sa=X&ved=2ahUKEwjilM-ppobyAhXY3J4KHTEdDzYQoiowEnoECEcQAw" target="_blank" class="fa fa-google"></a><a href="https://www.instagram.com/madtechdiagnostics" target="_blank" class="fa fa-instagram"></a>
         </p>
 
     </footer>
