--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 
         </article>
         <section>
-            <aside>
+            <aside role="complementary">
                 <h2>Who We Are</h2>
                 <h3>Owner - Tech<br>Mickey Mouse</h3>
                 <img src="images/mickey.jpg" alt="Mickey photo">
