--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                 <h3>Service Writer<br>Mini Mouse</h3>
                 <img src="images/mini.jpg" alt="Mini photo">
             </aside>
-            <form action="mailto:bogus_email@outlook.com" method="POST" enctype="multipart/form-data" name="EmailForm">
+            <form role="search" mailto:bogus_email@outlook.com" method="POST" enctype="multipart/form-data" name="EmailForm">
                 <input type="text" title="name" placeholder="Name" required>
                 <input type="email" title="email" placeholder="Email" required>
                 <textarea name="text" title="message" placeholder="Message" required></textarea>
