--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MadTech Diagnostics</title>
+    <title>MadTech Diagnostics Accurate Auto & Diesel Solutions</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
@@ -21,16 +21,16 @@
 
     <header>
 
-        <a href="index.html"><img src="images/madtech_logo.png" alt="madtech logo"></a>
+        <a href="index.html" title="Welcome to MadTech Diagnositcs Home Page"><img src="images/madtech_logo.png" alt="Madtech logo"></a>
         
     </header>
-    <nav id="nav_menu">
+    <nav>
 		<ul>
-			<li><a href="index.html" alt ="home page" class="current">Home</a></li>
+			<li><a href="index.html" title="Welcome to MadTech Diagnositcs Home Page" class="current">Home</a></li>
 
-			<li><a href="services.html" alt="services page">Services</a></li>
+			<li><a href="services.html" title="Welcome to MadTech Diagnositcs Services Page">Services</a></li>
 
-			<li><a href="contact.html"alt="contact page ">About Us</a></li>
+			<li><a href="contact.html" title="Welcome to MadTech Diagnositcs Contact Page ">About Us</a></li>
 		</ul>
 	</nav>
     <main>
@@ -43,7 +43,7 @@
 
             <p>We are a mobile automotive diagnostic service were we come to you to diagnose and/or program your vehicle on site. We serve dealships, automotive shops, small businesses, and private vehicle owners in all of beautiful Central Oregon.</p>
 
-            <h2>Diagnostics video of the week.</h2>
+            <h2>Diagnostics Video of the Week.</h2>
 
             <iframe src="https://www.youtube.com/embed/TgdqJ7irgB4" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             
@@ -54,7 +54,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2020 - MadTechDiagnostics<a href="https://www.google.com/maps/uv?pb=!1s0x22b60f6a060ecfeb%3A0xbe1cb9c6a8ad2582!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs%3Dw180-h320-k-no!5smadtech%20diagnostics%20-%20Google%20Search!15sCgIgAQ&imagekey=!1e10!2sAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs&hl=en&sa=X&ved=2ahUKEwjilM-ppobyAhXY3J4KHTEdDzYQoiowEnoECEcQAw" target="_blank" class="fa fa-google"></a><a href="https://www.instagram.com/madtechdiagnostics" target="_blank" class="fa fa-instagram"></a>
+        <p>&copy; 2020 - MadTechDiagnostics<a href="https://www.google.com/maps/uv?pb=!1s0x22b60f6a060ecfeb%3A0xbe1cb9c6a8ad2582!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs%3Dw180-h320-k-no!5smadtech%20diagnostics%20-%20Google%20Search!15sCgIgAQ&imagekey=!1e10!2sAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs&hl=en&sa=X&ved=2ahUKEwjilM-ppobyAhXY3J4KHTEdDzYQoiowEnoECEcQAw" title="Welcome to our Google Page" target="_blank" class="fa fa-google"></a><a href="https://www.instagram.com/madtechdiagnostics" title="Welcome to our Instagram Page" target="_blank" class="fa fa-instagram"></a>
         </p>
 
     </footer>
