--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MadTech/Services</title>
+    <title>Services</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
@@ -18,18 +18,20 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="images/madtech_logo.png" alt="madtech logo"></a>
+        <a href="index.html" title="Welcome to MadTech Diagnositcs Home Page"><img src="images/madtech_logo.png" alt="Madtech logo"></a>
     </header>
-    <nav id="nav_menu">
+    <nav>
 		<ul>
-			<li><a href="index.html">Home</a></li>
+			<li><a href="index.html" title="Welcome to MadTech Diagnositcs Home Page">Home</a></li>
 
-			<li><a href="services.html" class="current">Services</a></li>
+			<li><a href="services.html" title="Welcome to MadTech Diagnositcs Services Page" class="current">Services</a></li>
 
-			<li><a href="contact.html">About Us</a></li>
+			<li><a href="contact.html" title="Welcome to MadTech Contact Page">About Us</a></li>
 		</ul>
 	</nav>
     <main>
+        <h1>Services</h1>
+
         <!-- Services-->
         <article>
 
@@ -62,8 +64,8 @@
     <footer>
         <p>&copy; 2020 - MadTechDiagnostics<a
                 href="https://www.google.com/maps/uv?pb=!1s0x22b60f6a060ecfeb%3A0xbe1cb9c6a8ad2582!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs%3Dw180-h320-k-no!5smadtech%20diagnostics%20-%20Google%20Search!15sCgIgAQ&imagekey=!1e10!2sAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs&hl=en&sa=X&ved=2ahUKEwjilM-ppobyAhXY3J4KHTEdDzYQoiowEnoECEcQAw"
-                alt="Go to google" class="fa fa-google"></a><a href="https://www.instagram.com/madtechdiagnostics"
-                alt="Go to instagram" class="fa fa-instagram"></a>
+                title="Welcome to our Google Page" class="fa fa-google"></a><a href="https://www.instagram.com/madtechdiagnostics"
+                title="Welcome to our Instagram Page" class="fa fa-instagram"></a>
         </p>
 
     </footer>
