--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MadTech/Contact</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
@@ -18,21 +18,23 @@
 
 <body>
     <header>
-        <a href="index.html" alt="home page"><img src="images/madtech_logo.png" alt="madtech logo"></a>
+        <a href="index.html" title="Welcome to our Google Page"><img src="images/madtech_logo.png" alt="madtech logo"></a>
     </header>
-    <nav id="nav_menu">
+    <nav>
 		<ul>
-			<li><a href="index.html" alt="home page">Home</a></li>
+			<li><a href="index.html" title="Welcome to MadTech Diagnositcs Home Page">Home</a></li>
 
-			<li><a href="services.html" alt="service page">Services</a></li>
+			<li><a href="services.html" title="Welcome to MadTech Diagnositcs Service Page">Services</a></li>
 
-			<li><a href="contact.html" class="current">About</a></li>
+			<li><a href="contact.html" title="Welcome to MadTech Diagnositcs Contact Page" class="current">About</a></li>
 		</ul>
 	</nav>
     <main>
+        <h1>Contact Us</h1>
+
         <!-- Contact  -->
         <article>
-            <h1>Let's Get In Touch!</h1>
+            <h2>Let's Get In Touch!</h2>
 
 
             <p>Is there anything we can do to help? <br> Give us a call or send us an
@@ -43,14 +45,14 @@
 
         </article>
         <section>
-            <aside role="complementary">
+            <aside>
                 <h2>Who We Are</h2>
                 <h3>Owner - Tech<br>Mickey Mouse</h3>
                 <img src="images/mickey.jpg" alt="Mickey photo">
                 <h3>Service Writer<br>Mini Mouse</h3>
                 <img src="images/mini.jpg" alt="Mini photo">
             </aside>
-            <form role="search" mailto:bogus_email@outlook.com" method="POST" enctype="multipart/form-data" name="EmailForm">
+            <form>
                 <input type="text" title="name" placeholder="Name" required>
                 <input type="email" title="email" placeholder="Email" required>
                 <textarea name="text" title="message" placeholder="Message" required></textarea>
@@ -62,8 +64,8 @@
     <footer>
         <p>&copy; 2020 - MadTechDiagnostics<a
                 href="https://www.google.com/maps/uv?pb=!1s0x22b60f6a060ecfeb%3A0xbe1cb9c6a8ad2582!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs%3Dw180-h320-k-no!5smadtech%20diagnostics%20-%20Google%20Search!15sCgIgAQ&imagekey=!1e10!2sAF1QipMNL5jhSCMI5iHDysqbkaShDET8PUwVKIrMxoSs&hl=en&sa=X&ved=2ahUKEwjilM-ppobyAhXY3J4KHTEdDzYQoiowEnoECEcQAw"
-                alt="Go to google" class="fa fa-google" target="_blank"></a><a
-                href="https://www.instagram.com/madtechdiagnosti="Go to instagram" class="fa fa-instagram"
+                title="Welcome to our Google Page" class="fa fa-google" target="_blank"></a><a
+                href="https://www.instagram.com/madtechdiagnostics" title="Welcome to our Instagram Page" class="fa fa-instagram"
                 target="_blank"></a>
         </p>
 
