--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <!-- 
             Charlie Villanueva
-            08-18-2021
-            CS 125H - Term Project Home Page v5
+            08-31-2021
+            CS 125H - Term Project Home Page Final Version
          -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
